--- a/Components/Header/NavComponent.module.css
+++ b/Components/Header/NavComponent.module.css
@@ -1,6 +1,7 @@
 .customNavbar {
   background-color: #f8f9fa;
   padding: 1rem 2rem;
+  margin-bottom: 3rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -76,7 +77,7 @@
   display: none;
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 5%;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
